--- a/public/signup.html
+++ b/public/signup.html
@@ -11,8 +11,8 @@
   <div class="signup-container">
     <h2>Create Student Account</h2>
     <form action="/signup" method="POST">
-      <label>Student ID or Email</label>
-      <input type="text" name="username" required>
+      <label>Email</label>
+      <input type="text" name="email" required>
 
       <label>Password</label>
       <input type="password" name="password" required>
